# nLSBs-Steganography

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  OPTIMIZATION.md  PERFORMANCE.md  README.md  pyproject.toml
.github/workflows/: testing-flow.yml
src/: update_pixel.c
src/nlsbs_steganography/: __init__.py  nlsbs_steganography.py
tests/: conftest.py  test_nlsbs_steganography.py
tools/: benchmarking.py  demo.py  profiling.py
tools/optimization/: update_pixel.c
